# jdtls-rust

./: .gitignore  Cargo.toml  Main.java  PROGRESS.md  build.rs
ecj-bridge/: pom.xml
ecj-bridge/src/com/jdtls/ecjbridge/: AstNavigationService.java  BridgeProtocol.java  CompilationService.java  CompletionService.java  FormatterService.java  InMemoryCompilationUnit.java  InMemoryNameEnvironment.java  Main.java
src/: config.rs  document_store.rs  embedded_jar.rs  main.rs  server.rs
src/analysis/: dispatcher.rs  mod.rs
src/analysis/semantic/: code_action.rs  completion.rs  definition.rs  diagnostics.rs  ecj_process.rs  hover.rs  mod.rs  protocol.rs
src/analysis/syntax/: completion.rs  diagnostics.rs  folding.rs  mod.rs  navigation.rs  outline.rs  parser.rs  selection.rs  snippets.rs  tokens.rs
src/handlers/: text_document.rs
