[package]
name = "jdtls-rust"
version = "0.1.0"
edition = "2021"
description = "Lightweight Java Language Server in Rust, backed by ECJ"
license = "EPL-2.0"

[[bin]]
name = "jdtls-rust"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
# Do NOT add a separate lsp-types — use tower_lsp::lsp_types to avoid version conflicts.
url = "2"              # Url type used directly alongside lsp_types re-export
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.22"
tree-sitter-java = "0.21"
dashmap = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
once_cell = "1"
regex = "1"
ropey = "1"            # efficient rope for incremental text edits
tempfile = "3"         # extract embedded JAR to tmp at startup

[build-dependencies]
# nothing needed unless we add JAR embedding later
